# flipperzero

./: Cargo.toml  README.md
crates/flipperzero/src/: lib.rs
crates/rt/: Cargo.toml
crates/rt/src/: lib.rs  panic_handler.rs
crates/sys/: Cargo.toml  build.rs
crates/sys/src/: bindings.rs
